# UltimatniHra

./: .gitmodules  CMakeLists.txt  Event.cpp  Event.h  MACROS.h  README.md  main.cpp
DeprecatedCode/: Event.h  ScaleFactorCalculator.cpp
Test/: StructureMapTest.cpp
Tests/: Generace_test.cpp  ScalingFactorCalculator_test.cpp  StructureMapTest.cpp
assets/: demo.rml
client/: Client.cpp  Client.h
cmake/: FetchDependecies.cmake  (+1 more)
src/: CMakeLists.txt  main.cpp
src/Application/: Application.cpp  Logger.cpp  SaveGame.cpp  dataStructures.cpp
src/DeprecatedCode/: ScaleFactorCalculator.h
src/Entities/: Entity.cpp  EntityEvent.cpp  EntityScripts.cpp  PathManager.cpp  Player.cpp  Slime.cpp
src/Hardware/: Hardware.cpp
src/Items/: ChestInventory.cpp  Crafting.cpp  Item.cpp  inventory.cpp
src/Menu/: Menu_listeners.cpp  RmlUi_Platform_SDL.cpp  RmlUi_Renderer_SDL.cpp  UIComponent.cpp
src/Server/: AiManager.cpp  BossPathfinding.cpp  BossPathfindingCoordinateBased.cpp  Server.cpp  generace_mapy.cpp
src/Sprites/: AnchorSprite.cpp  ChestSprite.cpp  GhostSprite.cpp  OreDepositSprite.cpp  OreNodeSprite.cpp  PlayerSprite.cpp  SlimeSprite.cpp  SlimeSprite_Fire.cpp  SlimeSprite_Ghost.cpp  Sprite.cpp  TreeSprite.cpp  WaterSprite.cpp
src/Structures/: Anchor.cpp  Chest.cpp  OreDeposit.cpp  OreNode.cpp  Structure.cpp  Tree.cpp
src/Window/: ChunkManagment.cpp  Window.cpp  WorldRender.cpp  WorldStructs.cpp
src/assets/ui/: debug_menu.rml  options_menu.rml
src/dataStructures/: dataStructures.h
src/render/: Window.cpp
src/render/Menu/: RmlUi_Platform_SDL.cpp
src/render/Sprites/: Sprite.cpp  WaterSprite.hpp
src/render/World/: ChunkManagment.cpp  Item.cpp
src/server/Entities/: Player.cpp
src/server/Structures/: Structure.cpp
src/server/World/: BossPathfinding.cpp  BossPathfinding.h  WorldStructs.cpp  generace_mapy.cpp
(+159 files in other folders)
